# slayer

./: .gnupload  .hgignore  3d.cc  3d.h  AUTHORS  ChangeLog  DEPENDENCIES  DESIGN  Makefile  Makefile.am  NEWS  README  THANKS  TODO  TODO.build  TODO.local  aclocal.m4  audio.c  audio.h  configure  configure.ac  draw3d.cc  draw3d.h  extend.h  file.c  file.h  font.c  font.h  game.scm  image.c  image.h  input.c  input.h  ode.scm  pong.scm  scancode.c  server.scm  slayer.c  slayer.h  slayer.scm  (+12 more)
3d/: cube.3d
demos/: Makefile  README  alea-evangeli.ss  ard-ri.lsp  ard-ri.scm  ard-ri.ss  butterfly.scm  chess.lsp  chess.scm  chess.ss  config.scm  control.scm  default.moves  drawing.scm  evaluation.ss  extra  image-browser.scm  life.scm  mesh-browser.scm  ode.scm  pandora.scm  pong.scm  posed-trash.scm  posed.scm  poses.scm  red.scm  rigged.scm  schess-client.scm  schess-redis.scm  schess-server.scm  schess.scm  scum  sim.scm  slayer  slayer.scm  snake.scm  solitaire.ss  sweep3.scm  tafl.scm  temporary-poses.scm  (+2 more)
demos/art/: totalnakutasa.sfd
demos/art/3d/: ball-socket.3d  hinge-2.3d  hinge.3d  slider.3d  torso.3d  universal.3d
demos/art/3d/rob/: BLENDSWAP_LICENSE.txt  abdomen.3d  chest.3d  head.3d  headphones.3d  helmet-shield.3d  helmet-top.3d  helmet.3d  hip.3d  left-arm.3d  left-calf-shield.3d  left-calf.3d  left-foot.3d  left-forearm-shield.3d  left-forearm.3d  left-palm.3d  left-tigh.3d  neck.3d  pelvis.3d  right-arm.3d  right-calf.3d  right-foot.3d  right-forearm.3d  right-palm.3d  right-tigh.3d
demos/art/humanoid/: arm.3d  arm.ply  calf.3d  calf.ply  chest.3d  chest.ply  foot.3d  foot.ply  forearm.3d  forearm.ply  head.3d  head.ply  palm.3d  palm.ply  pelvis.3d  pelvis.ply  tigh.3d  tigh.ply
demos/art/rigs/: car.rig  ground.rig  legs.rig  rob.rig  robo.rig
demos/butterfly/: categories.scm  cursor.scm  parameters.scm  render.scm  selection.scm
demos/editor/: behaviors.scm  camera.scm  control.scm  limbs.scm  modes.scm  movesets.scm  poses.scm  relations.scm
demos/editor/posed/: undo.scm  widgets.scm
demos/editor/rigged/: body.scm  joint.scm  object.scm
demos/posed/: default.moves  evaluation.ss
demos/red/: body.scm  joint.scm  object.scm  relations.scm
demos/rigged/: body.scm  joint.scm  object.scm  relations.scm
demos/schess/: elements.scm  game.scm  interface.scm  network-client.scm  network-server.scm  redis.scm  rules.scm  simple-board-gameplay.scm  simple-game.scm  widgets.scm
demos/scum/: Makefile
demos/scum/physics/: Makefile  body.cc  joint.cc  physics.cc  physics.hh  physics.scm  rig.cc  sim.cc
doc/: Chess Pieces.html  Hnefatafl.html  Makefile.am  Open Dynamics Engine.html  ode.html  sdlres.html  slayer.texi  tao-goose.lyx  version.texi
doc/www/slayer/: index.php  template.html
doc/www/slayer/CVS/: Entries  Repository
doc/www/slayer/content/: contact.html  downloads.html  ideas.html  intro.html  news.html  screenshots.html
doc/www/slayer/content/CVS/: Entries  Repository  Root
doc/www/slayer/images/CVS/: Entries  Repository
doc/www/slayer/manual/: Direct-Layer.html  Diving-into-3D-graphics.html  Getting-started.html  Implementing-persistent-input.html  Input-handling-and-screen-management.html  Introduction.html  Invoking-SLAYER.html  Key-names.html  Loading-and-displaying-images.html  Loading-and-playing-sounds.html  Plug_002dins-_0028SCUM_0029.html  Rendering-and-displaying-text.html  Trying-out-the-demos.html  Widgets.html  Working-with-external-data.html  index.html
doc/www/slayer/manual/CVS/: Entries  (+1 more)
extra/: 3d.scm  common.scm  function.scm  goose.scm  hset.scm  math.scm  matrix.scm  network-objects.scm  network.scm  oop.scm  overload.scm  ref.scm  shape.scm  slayer.scm  subspace.scm  time.scm  vector-lib.scm
guile-modules/: Makefile.am
guile-modules/extra/: 3d.scm  ansi-color.scm  array.scm  attributes.scm  blob.scm  common.scm  define-keywords.scm  drawing.scm  figures.scm  graph.scm  math.scm  network.scm  noobs.scm  oop.scm  redis.scm  ref.scm  registry.scm  scmutils.scm  shape.scm  slayer.scm  threads.scm  time.scm  trimesh.scm  u8vectors.scm
guile-modules/extra/drawing/: operations.scm  parameters.scm  primitives.scm
guile-modules/extra/scmutils/: Makefile.am  README  compat.scm  load-real.scm  load.scm  primes.scm
guile-modules/extra/scmutils/general/: load.scm
guile-modules/extra/scmutils/kernel/: load.scm
guile-modules/extra/scmutils/numerics/: load.scm
guile-modules/extra/scmutils/numerics/linear/: load.scm
guile-modules/ice-9/: nice-9.scm
guile-modules/widgets/: 3d-editor.scm  3d-view.scm  3d.scm  base.scm  bitmap.scm  image-clipper.scm  ode-view.scm  physics.scm  sortable.scm  sprite.scm  tab.scm  text-area.scm
libs/: Makefile  ode.c  ode.cc  physics.cc
libs/legacy/: Makefile  ode.cc  ode.scm
libs/paradigm/: Makefile  example-sim.scm  ode-example.c
libs/physics/: Makefile  body.cc  joint.cc  physics.cc  physics.h  physics.scm  rig.cc  sim.cc
m4/: ax_check_gl.m4
rigs/: car.rig  ground.rig
scm/: 3d-view.scm  3d.scm  defs.scm  goose-view.scm  goose.scm  network-3d-view.scm  widgets.scm
src/: 3d.cc  3d.hh  Makefile.am  _image.h  arrays.cc  audio.c  drawing.c  extend.h  font.c  image.c  image.h  input.c  input.h  scancode.c  slayer.c  slayer.h  symbols.c  symbols.h  timer.c  utils.h  video.c  video.h  vmx.hh
src/3d/: buffers.cc  color.cc  extensions.m4  info.m4  lights.cc  transforms.cc
src/libs/physics/: body.cc  joint.cc  physics.cc  physics.h  physics.scm
src/scum/: Makefile  physics.scm
src/scum/legacy/: Makefile
src/scum/paradigm/: Makefile  example-sim.scm  sim.cc
src/scum/physics/: body.cc  physics.cc  physics.h  physics.scm  sim.cc
src/vmx/: m3x3.hh  m4x4.hh  math.hh  qt.hh  v2.hh  v3.hh  v4.hh
test-suite/schess/: elements.sh
test-suite/tools/: ply23d-unit.sh  ply23d.sh
test-suite/tools/data/: cube.3d.norm  cube.ply
tools/: Makefile.am  append  emacs  fsub  grup.c  mesh-browser.scm  ply23d.scm  same-lisp.scm  search  test-module.scm  xmirror.scm
widgets/: 3d-view.scm  base.scm  bitmap.scm  defs.scm  ode-view.scm  text-area.scm  widgets.scm
