extradir = $(guilesitedir)/extra
widgetsdir = $(guilesitedir)/widgets

extra_DATA = extra/3d.scm extra/common.scm extra/figures.scm extra/hset.scm \
	extra/math.scm extra/oop.scm extra/ref.scm extra/shape.scm \
	extra/slayer.scm extra/threads.scm extra/time.scm
widgets_DATA = widgets/3d-view.scm widgets/base.scm widgets/bitmap.scm \
	widgets/ode-view.scm widgets/text-area.scm

EXTRA_DIST = $(extra_DATA) $(widgets_DATA)
