extradir = $(guilesitedir)/extra
widgetsdir = $(guilesitedir)/widgets

extra_DATA = extra/3d.scm extra/common.scm extra/figures.scm extra/hset.scm \
	extra/math.scm extra/oop.scm extra/ref.scm extra/shape.scm \
	extra/slayer.scm extra/threads.scm extra/time.scm extra/scmutils.scm

widgets_DATA = widgets/3d.scm widgets/base.scm widgets/sprite.scm \
	widgets/physics.scm widgets/text-area.scm widgets/image-clipper.scm

EXTRA_DIST = $(extra_DATA) $(widgets_DATA)
