scmutilsdir = $(guilesitedir)/extra/scmutils

scmutils_DATA = compat.scm COPYING README LICENSE load-real.scm load.scm \
	primes.scm srfi-40.scm \
	general/canonicalizer.scm general/load.scm general/logic-utils.scm \
	kernel/express.scm kernel/genenv.scm kernel/generic.scm \
	kernel/ghelper.scm kernel/iterat.scm kernel/load.scm \
	kernel/mathutil.scm kernel/matrices.scm kernel/numeric.scm \
	kernel/numsymb.scm kernel/strutl.scm kernel/types.scm \
	kernel/utils.scm \
	numerics/load.scm \
	numerics/linear/load.scm numerics/linear/svd.scm

EXTRA_DIST = $(scmutils_DATA)
